--- a/art-parent/pom.xml
+++ b/art-parent/pom.xml
@@ -125,6 +125,13 @@
 		    <type>jar</type>  
 		    <scope>compile</scope>  
 		</dependency>  
+		
+		<!-- httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
+		</dependency>
 
 	</dependencies>
 
