--- a/art-parent/art-service/pom.xml
+++ b/art-parent/art-service/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>art-util</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cr.art</groupId>
+			<artifactId>art-cache</artifactId>
+			<version>0.0.1</version>
+		</dependency>
   	
   </dependencies>
 </project>
